--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 *{
 	margin:0;
 	padding:0;
+
 }
 
 body{
 	font-size:13px;
 	color:#eee;
 	font-family:Arial, Helvetica, sans-serif;
-	text-shadow:1px 1px 0 white;
+/*	text-shadow:1px 1px 0 white; */
 
 	/* Fallback color */
 	background-color:#57575d;
@@ -18,7 +19,14 @@ body{
 
 .page{
 	width:600px;
-	margin:150px auto 0;
+	margin:75px auto 0;
+}
+
+#container{
+	display:flex;
+	flex-direction: column;
+text-align:center;
+margin-top: 5%;
 }
 
 
@@ -92,14 +100,25 @@ fieldset{
 
 
 a.button{
-	background:url('images/buttons.png') no-repeat;
+	/*background:url('images/buttons.png') no-repeat;*/
 	width:105px;
 	height:37px;
 	position:absolute;
 	top:52px;
 	right:42px;
-	text-indent:-9999px;
+	/*text-indent:-9999px;*/
 	overflow:hidden;
+	display:       inline-block;
+	padding:       8px 20px;
+	background:    #073763 url('http://dabuttonfactory.com/button.png?w=1&h=40&bgt=gradient&bgc=3d85c6&ebgc=073763') repeat-x;
+	background:    -moz-linear-gradient(#3d85c6, #073763);
+	background:    -o-linear-gradient(#3d85c6, #073763);
+  background:    -webkit-linear-gradient(#3d85c6, #073763);
+	background:    linear-gradient(#3d85c6, #073763);
+	border-radius: 5px;
+	color:         #fff;
+	font:          normal 700 24px/1 "Roboto", sans-serif;
+	text-align:    center;
 	border:none !important;
 }
 
@@ -171,7 +190,7 @@ a, a:visited {
 	text-decoration:none;
 	outline:none;
 	border-bottom:1px dotted #97cae6;
-	color:#97cae6;
+	/* color:#97cae6; */
 }
 
 a:hover{
